assets/theme/css/ps-theme.css
/* ... */
/*-----------------------------------------------------*/
#huxley-app .login-box {
	background-color: white;
	color: black;
	border-radius: 10px;
	padding: 2rem;
	margin-top: 3rem;
}

/****** Coin count nav bar *****************************/

#coin-nav {
	display: none;
}

.huxley-authenticated #coin-nav {
	display: initial;
}

#huxley-app .coin-nav {
	width: 300px;
	margin: 0;
	background: #f7c325;
    	position: fixed;
	left: -90px;
    	top: 99px;
	z-index: 10;
   	padding: 10px 29px 10px 0px;
    	text-transform: uppercase;
	text-align: right;
    	border-radius: 0px 50px 50px 0px;
	animation-duration: 4s;
	animation-name: bobbing;
	animation-iteration-count: infinite;
	animation-timing-function: ease-in-out;
	transition: transform 0.5s ease-in-out, left 0.5s ease-in-out;
}

@keyframes bobbing {
	0% {transform: translateX(-165px);}
	50% {transform: translateX(-185px);}
	100% {transform: translateX(-165px);}
}

#huxley-app .coin-nav:hover, #huxley-app .coin-nav:focus {
	left: 50px;
	animation-play-state: paused;
	/* animation-duration: 1s;
	animation-name: slideout;
    	animation-timing-function: ease-in-out;
	animation-iteration-count: 1;
	animation-fill-mode: both; */
}

@keyframes slideout {
	0% {left: -90px;}
	100% {left: 0px;}
}

#huxley-app .coin-nav .nav-link {
	padding: 0.3rem 0 0.3rem 1rem;
}

#huxley-app .coin-nav .nav-link {
	color: #232628;
}

#huxley-app .coin-nav .nav-link:hover, #huxley-app .coin-nav .nav-link:focus {
	color: white;
}

#huxley-app .coin-nav .fa-coins::after {
	content: "\f555";
    	transform: rotate(-30deg);
    	transform-origin: center;
    	display: inline-block;
    	-webkit-transform: rotate(-30deg);
    	-moz-transform: rotate(-30deg);
    	-ms-transform: rotate(-30deg);
    	-o-transform: rotate(-30deg);
	font-family: "Font Awesome 6 Free";
}

#huxley-app .coin-nav .fa-coins::before {
	display: none;
}

#huxley-app .coin-nav i {
	float: right;
	padding-left: 15px;
    	margin-right: 0;
	position: relative;
    	right: -10px;
}

/****** custom nav bar */
#custom-html-85 div {
    background-color: #232628;
    text-align: center;
    padding-bottom: 15px;
    padding-top: 15px;
    border-bottom: 5px solid #f7c325;
    font-size: 150%;
    /* color: #232323; */
}

#share3-4u {
	padding-top: 0;
	padding-bottom: 1.8rem;
	background-color: #232628;
}
/* Primary Buttons */
#huxley-app .btn-primary, #huxley-app .btn-secondary {
	color: white; 
	background-color: #007bff;
	border-color: #007bff;
	border-radius: 100px;
	text-transform: uppercase;
}
#huxley-app .btn-primary:hover {
	background-color: #0069d9;
	border-color: #0069d9;  
}
#huxley-app .btn-primary:focus{
	box-shadow: 0 0 0 0.2rem rgba(#007bff, .25);
}
#huxley-app .btn-primary:not(:disabled):active {
	background-color: #0062cc; 
}
#huxley-app .btn-primary:disabled:hover {
	background-color: #007bff;
	border-color: #007bff;
}

/* Secondary Buttons */
/* #huxley-app .btn-secondary {
	color: white; 
	background-color: #6c757d;
	border-color: #6c757d;
}
#huxley-app .btn-secondary:hover {
	background-color: #5a6268;
	border-color: #5a6268; 
}
#huxley-app .btn-secondary:focus{
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(#6c757d, .25);
}
#huxley-app .btn-secondary:not(:disabled):active {
	background-color: #545b62
}
#huxley-app .btn-secondary:disabled:hover {
	background-color: #6c757d;
	border-color: #6c757d;
} */
/****** smart banner config */
.smartbanner.smartbanner--android {
	z-index: 1100;
}

